Made Domain and Validators for Prescription and PrescriptionDetail entity